[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/photo_2022-09-27_20-14-34.jpg" type="Texture" id=2]
[ext_resource path="res://assets/bow-arrow-left.png" type="Texture" id=3]
[ext_resource path="res://scripts/RevolverBounce.tres" type="PhysicsMaterial" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="Bullet" type="RigidBody2D" groups=["bullet"]]
collision_layer = 2
mass = 0.00102041
physics_material_override = ExtResource( 4 )
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.0646086, 0.0222464 )
rotation = 1.5708
scale = Vector2( 0.00148551, 0.008309 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Arrow" type="Sprite" parent="."]
visible = false
rotation = 3.14159
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="tree_entered" from="." to="." method="_on_Bullet_tree_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
